# MEGqc

./: .gitignore  EEG_Support_in_MEGqc.md  MANIFEST.in  PULL_REQUEST.md  README.md  pyproject.toml  requirements.txt  setup.py
docs/source/: requirements.txt  settings_ini.rst
hpc/: BUILD_APPTAINER_IMAGE.md  CLI_REFERENCE.md  MEGQC.def  README.md
installers/Linux/: install_MEGqc.sh
installers/MacOS/: install_MEGqc.command
installers/Windows/: install_MEGqc.bat
meg_qc/: __init__.py  create_group_plots.py  create_group_qc_plots.py  create_multi_sample_group_plots.py  create_plots.py  test.py
meg_qc.egg-info/: PKG-INFO  requires.txt
meg_qc/calculation/: initial_meg_qc.py  meg_qc_pipeline.py  objects.py
meg_qc/calculation/metrics/: ECG_EOG_meg_qc.py  Head_meg_qc.py  PSD_meg_qc.py  Peaks_auto_meg_qc.py  Peaks_manual_meg_qc.py  Peaks_manual_meg_qc_numba.py  STD_meg_qc.py  muscle_meg_qc.py  summary_report_GQI.py
meg_qc/calculation/metrics/__pycache__/: Peaks_manual_meg_qc_numba.compute_ptp_epochs_numba-100.py310.1.nbc  Peaks_manual_meg_qc_numba.compute_ptp_epochs_numba-100.py310.2.nbc  Peaks_manual_meg_qc_numba.compute_ptp_epochs_numba-100.py310.nbi  Peaks_manual_meg_qc_numba.detect_peaks_numba-29.py310.1.nbc  Peaks_manual_meg_qc_numba.detect_peaks_numba-29.py310.2.nbc  Peaks_manual_meg_qc_numba.detect_peaks_numba-29.py310.nbi  Peaks_manual_meg_qc_numba.neighbour_peak_amplitude_numba-56.py310.1.nbc  Peaks_manual_meg_qc_numba.neighbour_peak_amplitude_numba-56.py310.nbi
meg_qc/miscellaneous/GUI/: megqcGUI.py  worker_entry.py
meg_qc/miscellaneous/GUI/assets/macos/: AppIcon.icns
meg_qc/miscellaneous/GUI/output_monitoring/: __init__.py  cli_terminal.py  live_terminal.py
meg_qc/miscellaneous/GUI/qc_viewer/: __init__.py  annotation_manager.py  content_panel.py  file_panel.py  timeseries_widget.py  viewer_window.py
meg_qc/miscellaneous/examples/: run_calculation_module.py  run_plotting_module.py
meg_qc/miscellaneous/optimizations/: artifact_detection_ancp.py
meg_qc/plotting/: meg_qc_group_plots.py  meg_qc_group_plots_prev.py  meg_qc_group_qc_plots.py  meg_qc_multi_sample_group_plots.py  meg_qc_plots.py  universal_html_report.py  universal_plots.py
meg_qc/settings/: settings.ini
tests/: test_global_report.py  test_meg_pipeline.py
tests/data/meg_datasets/ds_meg1/: CHANGES  dataset_description.json
tests/data/meg_datasets/ds_meg1/sub-009/ses-1/: sub-009_ses-1_scans.tsv
tests/data/meg_datasets/ds_meg1/sub-009/ses-1/meg/: sub-009_ses-1_coordsystem.json  sub-009_ses-1_task-deduction_run-1_events.tsv  sub-009_ses-1_task-deduction_run-1_meg.json  sub-009_ses-1_task-induction_run-1_channels.tsv  sub-009_ses-1_task-induction_run-1_events.tsv  sub-009_ses-1_task-induction_run-1_meg.json
