[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meg_qc"
description = "Tool for automated MEG data quality control"
readme = "README.md"
requires-python = "==3.10.*"
version = "0.7.1"
license = "MIT"
authors = [
    {name = "Karel Lopez Vilaret", email = "karel.mauricio.lopez.vilaret@uni-oldenburg.de"},
    {name = "Karel Lopez Vilaret"},
    {name = "Evgeniia Gapontseva"},
    {name = "Aaron Reer"},
    {name = "Jorge Bosch"},
    {name = "Erdal Karaca"},
]
maintainers = [
    {name = "ANCP Lab, University of Oldenburg", email = "karel.mauricio.lopez.vilaret@uni-oldenburg.de"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]

dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/ANCPLabOldenburg/MEGqc"

[project.scripts]
megqc = "meg_qc.miscellaneous.GUI.megqcGUI:run_megqc_gui"
run-megqc = "meg_qc.test:run_megqc"
run-megqc-plotting = "meg_qc.test:get_plots"
get-megqc-config = "meg_qc.test:get_config"
globalqualityindex = "meg_qc.test:run_gqi"

[tool.setuptools]
include-package-data = true
package-data = {"meg_qc.miscellaneous.GUI" = ["logo.png"]}

[tool.setuptools.packages.find]
include = ["meg_qc*"]

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]
