[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meg_qc"
description = "Tool for automated MEG and EEG data quality control"
readme = "README.md"
requires-python = ">=3.10,<3.15"
version = "0.9.8"
license = "MIT"
authors = [
    {name = "Karel Lopez Vilaret", email = "karel.mauricio.lopez.vilaret@uni-oldenburg.de"},
    {name = "Karel Lopez Vilaret"},
    {name = "Evgeniia Gapontseva"},
    {name = "Aaron Reer"},
    {name = "Jorge Bosch"},
    {name = "Erdal Karaca"},
]
maintainers = [
    {name = "ANCP Lab, University of Oldenburg", email = "karel.mauricio.lopez.vilaret@uni-oldenburg.de"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]

# ── Core dependencies ───────────────────────────────────────────────
# Bounds strategy:
#   lower bound  = oldest version that works with any supported Python (3.10+)
#   upper bound  = latest version tested in the reference env (Python 3.14)
# On older Pythons pip will pick the newest release that fits both
# the version range AND that Python's compatibility.
dependencies = [
    "ancpbids>=0.3,<=0.3.0",
    "prompt_toolkit>=3.0,<=3.0.52",
    "mne>=1.6,<=1.12.0",
    "pandas>=2.0,<=3.0.2",
    "plotly>=5.18,<=6.7.0",
    "joblib>=1.3,<=1.5.3",
    "psutil>=5.9,<=7.2.2",
    "matplotlib>=3.7,<=3.10.8",
    "pyqt6>=6.5,<=6.11.0",
    "PyQt6-WebEngine>=6.5,<=6.11.0",
    "pyqtgraph>=0.13,<=0.14.0",
    "numba>=0.58,<=0.65.0",
]

[project.urls]
Homepage = "https://github.com/ANCPLabOldenburg/MEGqc"

[project.scripts]
megqc = "meg_qc.miscellaneous.GUI.megqcGUI:run_megqc_gui"
run-megqc = "meg_qc.test:run_megqc"
run-megqc-plotting = "meg_qc.test:get_plots"
get-megqc-config = "meg_qc.test:get_config"
globalqualityindex = "meg_qc.test:run_gqi"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"meg_qc.miscellaneous.GUI" = [
    "logo.png",
    "assets/macos/AppIcon.icns",
    "assets/macos/AppIcon16.png",
    "assets/macos/AppIcon32.png",
    "assets/macos/AppIcon64.png",
    "assets/macos/AppIcon128.png",
    "assets/macos/AppIcon256.png",
    "assets/macos/AppIcon512.png",
    "assets/macos/AppIcon1024.png",
    "assets/windows/AppIcon.ico",
]

[tool.setuptools.packages.find]
include = ["meg_qc*"]

